--- a/EurovisionTotalizer/EurovisionTotalizer/EurovisionTotalizer.ConsoleClient.csproj
+++ b/EurovisionTotalizer/EurovisionTotalizer/EurovisionTotalizer.ConsoleClient.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EurovisionTotalizer.Domain\EurovisionTotalizer.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
