--- a/tests/RutovisionTotalizer.Domain.Tests/RutovisionTotalizer.Domain.Tests.csproj
+++ b/tests/RutovisionTotalizer.Domain.Tests/RutovisionTotalizer.Domain.Tests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Calculations\" />
+    <Folder Include="Calculators\" />
   </ItemGroup>
 
 </Project>
