--- a/src/EurovisionTotalizer.API/EurovisionTotalizer.API.csproj
+++ b/src/EurovisionTotalizer.API/EurovisionTotalizer.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EurovisionTotalizer.Application\EurovisionTotalizer.Application.csproj" />
     <ProjectReference Include="..\EurovisionTotalizer.Domain\EurovisionTotalizer.Domain.csproj" />
   </ItemGroup>
 
